Running tests on GitLab on arm64 Linux. (#11364)
Running tests on GitLab on arm64 Linux.

Co-authored-by: alexey.kuznetsov <alexey.kuznetsov@datadoghq.com>